<resources>
    <string name="app_name">enPiT_sample011</string>
    <string name="action_settings">Settings</string>
    <string name="connect_Server">Connecting to Server</string>
    <string name="login_title">Please login to the server</string>
    <string name="login_name">Login Name</string>
    <string name="login_email">Mail Address</string>
    <string name="login_btn">Login</string>
    <string name="entry_btn">Entry</string>
    <string name="cancel_btn">Cancel</string>
    <string name="msg_login_name_err">Incorrect login name</string>
    <string name="msg_mail_address_err">Incorrect mail address</string>
    <string name="token">cc1f266ee0bffd91c13b4f3bae3ad7f320edc1b5</string>
    <string name="entry_menu">Select Your Entry data</string>
    <string name="add_entry">Add New Entry</string>
    <string name="no_login_error">Error:You are not logged in.</string>
</resources>
